# dagger-harmonics

./: .gitignore  README.md  pyproject.toml
analysis/: analysis.ipynb  animation.py  data_research.ipynb  inspect_data.py  main.py  plotting.py  spherical_harmonics.py
src/analysis/: analysis.ipynb  data_utils.py
src/dagger_harmonics/: __init__.py  config.py  data_utils.py  main.py  plotting.py  train.py  utils.py
src/dagger_harmonics/data/: datasets.py
src/dagger_harmonics/models/: recreation.py
src/notes/: notes.md
tests/: test_main.py  test_plotting.py  test_recreation.py  test_train.py
