[project]
name = "dagger-harmonics"
version = "0.1.0"
description = "README.md"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Cutter Beck", email = "cbeckdevelopment@gmail.com" },
    { name = "Vishal Upendran", email = "vupendran@seti.org" }
]
maintainers = [
    { name = "Cutter Beck", email = "cbeckdevelopment@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch-harmonics>=0.8.0",
]

[project.scripts]
dagger-harmonics = "dagger_harmonics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.uv]
link-mode = "copy"