[project]
name = "dagger_harmonics"
version = "0.1.0"
description = "README.md"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Cutter Beck", email = "cbeckdevelopment@gmail.com" },
    { name = "Vishal Upendran", email = "vupendran@seti.org" }
]
maintainers = [
    { name = "Cutter Beck", email = "cbeckdevelopment@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aacgmv2>=2.6",
    "cartopy>=0.23",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=3.0.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "torch-harmonics>=0.8.0",
    "tqdm>=4.68.3",
]

[project.scripts]
dagger-harmonics = "dagger_harmonics.main:main"
dagger-train = "dagger_harmonics.main:train_model"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --import-mode=importlib"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
